# monolith_micro

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: lifecycle.py  main.py  middleware.py  uow.py
app/adapters/: ai_client.py
app/api/: __init__.py  health_check.py  tickets.py
app/common/: enums.py  exceptions.py  logging.py
app/core/: aiohttp_exception_handler.py  config.py  database.py
app/dependencies/: __init__.py  infrastructure.py  services.py
app/migrations/: env.py
app/models/: __init__.py  base.py  ticket.py
app/pyd/: llm_classification.py  responses.py  tickets.py
app/repositories/: base_repository.py  repository_error_handler.py  ticket_repository.py
app/services/: base.py  health_check_service.py  prompt_service.py  ticket_scheduler_service.py  ticket_service.py
app/utils/: category_matching.py  text_normalization.py  ticket_scheduler_func.py
tests/: conftest.py
tests/integrations/: test_healthcheck_router.py  test_ticket_repository.py  test_tickets_router.py  test_version.py
tests/unit/: test_ai_client.py  test_aiohttp_exception_handler.py  test_category_matching.py  test_config.py  test_database.py  test_dependencies_services.py  test_exceptions.py  test_health_check_service.py  test_lifecycle.py  test_main_lifespan.py  test_middleware.py  test_prompt_service.py  test_pyd_schemas.py  test_repository_error_handler.py  test_text_normalization.py  test_ticket_scheduler_func.py  test_ticket_scheduler_service.py  test_ticket_service.py  test_uow.py
(+4 files in other folders)
