[project]
name = "test-monolith"
version = "0.1.0"
description = ""
authors = [
    {name = "Primero1800",email = "Primero@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "apscheduler (>=3.10.0,<4.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.21"
mypy = "^2.3.0"
psycopg2-binary = "^2.9.12"
httpx = "^0.28.1"
pytest-mock = "^3.15.1"
testcontainers = "^4.14.2"
docker = "<7.2.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
